Change SESSION_SECRET to a secure value
Updated SESSION_SECRET value to a more secure name.

--- a/src/server/.env
+++ b/src/server/.env
@@ -18,7 +18,7 @@ REFRESH_TOKEN_SECRET=1        # Secret key for signing refresh tokens
 # -------------------------
 # SESSION & COOKIES
 # -------------------------
-SESSION_SECRET=1              # Secret for server-side sessions
+SESSION_SECRET=some_long_secret_name              # Secret for server-side sessions
 COOKIE_DOMAIN=1               # Domain where cookies will be valid
 ALLOWED_ORIGINS=1             # Comma-separated list of allowed frontend origins
 COOKIE_SECRET=1               # Secret for cookie encryption
