Update CLIENT_URLs to production Vercel URLs

--- a/src/server/.env
+++ b/src/server/.env
@@ -82,5 +82,5 @@ CLOUDINARY_API_SECRET=1       # Cloudinary API secret
 # -------------------------
 # CLIENT URLS
 # -------------------------
-CLIENT_URL_PROD=http://192.168.161.140:3000             # Frontend URL (production)
-CLIENT_URL_DEV=http://192.168.161.140:3000             # Frontend URL (development)
+CLIENT_URL_PROD=https://ecommerce-sepia-iota-43.vercel.app/             # Frontend URL (production)
+CLIENT_URL_DEV=https://ecommerce-sepia-iota-43.vercel.app/             # Frontend URL (development)
