--- a/src/server/.env
+++ b/src/server/.env
@@ -6,7 +6,7 @@ POSTGRES_DB=railway
 #STRIPE_SECRET_KEY=1
 DATABASE_URL=postgresql://postgres:dCOSnJEwKbFKoCujJKghaSqPGslzINXP@shuttle.proxy.rlwy.net:55478/railway 
 #DATABASE_URL=postgresql://postgres:Lberoh12@localhost:5432/b2c_ecommerce
-NODE_ENV=production                    # Environment mode (development | production)
+NODE_ENV=development                    # Environment mode (development | production)
 PORT=10000                        # Port for the backend server
 
 # -------------------------
